syntax = "proto3";
package MessageId;
enum Message {
    None = 0;
    Multi = 1;

    //
    SignIn=2000;
}